# SDU-CG-Exps

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  复习笔记.typ
helper/: main.py  qucikdrawlib.py
lib/: CMakeLists.txt
lib/corelib/: Algorithm.cxx  Algorithm.h  CMakeLists.txt  easyimgui.cxx  easyimgui.h  ggtest.cxx  ggtest.h  ggtest.h.in
lib/ggtest/: CMakeLists.txt  easyimgui.cxx  easyimgui.h  ggtest.cxx  ggtest.h  ggtest.h.in
lib/glad/: CMakeLists.txt  glad.c  glad.h
lib/imgui/: CMakeLists.txt
output/: exp1  exp2
src/: exp1.cxx  exp10.cxx  exp11.cxx  exp12.cxx  exp13.cxx  exp14.cxx  exp15.cxx  exp17.cxx  exp17refs.txt  exp18.cxx  exp2.cxx  exp20.cxx  exp3.cxx  exp4.cxx  exp5.cxx  exp6.cxx  exp7.cxx  exp8.cxx  exp9.cxx  libtest.cxx  rayTracing.cxx
src/exp16/: CMakeLists.txt  cg12_interaction.pro.user.00e8260  circle.cpp
src/exp19/: CMakeLists.txt  cgExperiment19TexDemo.pro  moc_widget.cpp  qrc_textures.cpp  widget.h
src/shaders/: fragment.glsl  fragment_shader.glsl  shadow_mapping.fs  shadow_mapping.vs  shadow_mapping_depth.fs  vertex_shader.glsl
